# C_Processus

./: CMakeLists.txt  README.md  calcul.c  costes_exo1.c  costes_exo10.c  costes_exo11.c  costes_exo12.c  costes_exo2.c  costes_exo3.c  costes_exo4.c  costes_exo5.c  costes_exo6.c  costes_exo7.c  costes_exo8.c  costes_exo9.c  main.c
