cmake_minimum_required(VERSION 3.17)
project(ExoCnamForks C)

set(CMAKE_C_STANDARD 99)

add_executable(ExoCnamForks main.c)
add_executable(ExoCnamForks1 costes_exo1.c)
add_executable(ExoCnamForks2 costes_exo2.c)
add_executable(ExoCnamForks3 costes_exo3.c)
add_executable(ExoCnamForks4 costes_exo4.c)
add_executable(ExoCnamForks5 costes_exo5.c)
add_executable(ExoCnamForks6 costes_exo6.c)
add_executable(ExoCnamForks7 costes_exo7.c)
add_executable(ExoCnamForks8 costes_exo8.c)
add_executable(ExoCnamForks9 costes_exo9.c)
add_executable(ExoCnamForks10 costes_exo10.c)
add_executable(ExoCnamForks11 costes_exo11.c)
add_executable(ExoCnamForks12 costes_exo12.c)
add_executable(calcul calcul.c)
